[package]
name = "philiprehberger-mock-server"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "Lightweight, per-test HTTP mock server for testing API integrations"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-mock-server"
documentation = "https://docs.rs/philiprehberger-mock-server"
keywords = ["mock", "http", "testing", "server", "api"]
categories = ["development-tools::testing", "web-programming::http-server"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
serde_json = "1"
